--- a/templates/singleproduct.html
+++ b/templates/singleproduct.html
@@ -170,58 +170,24 @@
                 <!-- //reviews -->
                 <!-- deals -->
                 <div class="deal-leftmk left-side">
+                    
+                    
                     <h3 class="sear-head">Special Deals</h3>
+                    {% for s in  catagory %}
                     <div class="special-sec1 row mb-3">
                         <div class="img-deals col-md-4">
-                            <img src="images/s4.jpg" class="img-fluid" alt="">
+                        <a href="{{s.slug}}">
+                            <img src="{{s.product_image.url}}" class="img-fluid" alt="">
+                            </a>
                         </div>
                         <div class="img-deal1 col-md-4">
-                            <h3>Shuberry Heels</h3>
-                            <a href="shop-single.html">$180.00</a>
+                            <h3>{{s.product_name}}</h3>
+                            <a href="{{s.slug}}">${{s.prize}}</a>
                         </div>
 
                     </div>
-                    <div class="special-sec1 row">
-                        <div class="img-deals col-md-4">
-                            <img src="images/s2.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="img-deal1 col-md-8">
-                            <h3>Chikku Loafers</h3>
-                            <a href="shop-single.html">$99.00</a>
-                        </div>
-
-                    </div>
-                    <div class="special-sec1 row my-3">
-                        <div class="img-deals col-md-4">
-                            <img src="images/s1.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="img-deal1 col-md-8">
-                            <h3>Bella Toes</h3>
-                            <a href="shop-single.html">$165.00</a>
-                        </div>
-
-                    </div>
-                    <div class="special-sec1 row">
-                        <div class="img-deals col-md-4">
-                            <img src="images/s5.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="img-deal1 col-md-8">
-                            <h3>Red Bellies</h3>
-                            <a href="shop-single.html">$225.00</a>
-                        </div>
-
-                    </div>
-                    <div class="special-sec1 row mt-3">
-                        <div class="img-deals col-md-4">
-                            <img src="images/s3.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="img-deal1 col-md-8">
-                            <h3>(SRV) Sneakers</h3>
-                            <a href="shop-single.html">$169.00</a>
-                        </div>
-
-                    </div>
-                </div>
+                    {% endfor %}
+                                   </div>
                 <!-- //deals -->
 
             </div>
@@ -289,86 +255,34 @@
                         minim veniam, quis nostrud exercitation ullamco. labore et dolore magna aliqua.</p>
                 </div>
 
+                <!--recommendations page-->
                 <h3 class="shop-sing">Featured Products</h3>
                 <div class="row m-0">
+                {% for i in prod %}
+                
                     <div class="col-md-4 product-men">
                         <div class="product-shoe-info shoe text-center">
                             <div class="men-thumb-item">
-                                <img src="images/s10.jpg" class="img-fluid" alt="">
+                            <a href="{{i.slug}}">
+                                <img src="{{i.product_image.url}}" class="img-fluid" alt=""></a>
                                 <span class="product-new-top">New</span>
                             </div>
                             <div class="item-info-product">
                                 <h4>
-                                    <a href="shop-single.html">Suitable Lace Up </a>
+                                    <a href="{{i.slug}}">{{i.product_name}}</a>
                                 </h4>
 
                                 <div class="product_price">
                                     <div class="grid-price">
-                                        <span class="money">$675.00</span>
+                                        <span class="money">{{i.prize}}</span>
                                     </div>
                                 </div>
-                                <ul class="stars">
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-half-o" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-half-o" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-o" aria-hidden="true"></span></a></li>
-                                </ul>
+                              
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 product-men">
-                        <div class="product-shoe-info shoe text-center">
-                            <div class="men-thumb-item">
-                                <img src="images/s11.jpg" class="img-fluid" alt="">
-                                <span class="product-new-top">New</span>
-                            </div>
-                            <div class="item-info-product">
-                                <h4>
-                                    <a href="shop-single.html">Black Flats</a>
-                                </h4>
-
-                                <div class="product_price">
-                                    <div class="grid-price">
-                                        <span class="money">$475.00</span>
-                                    </div>
-                                </div>
-                                <ul class="stars">
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-half-o" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-o" aria-hidden="true"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 product-men">
-                        <div class="product-shoe-info shoe text-center">
-                            <div class="men-thumb-item">
-                                <img src="images/s12.jpg" class="img-fluid" alt="">
-                                <span class="product-new-top">New</span>
-                            </div>
-                            <div class="item-info-product">
-                                <h4>
-                                    <a href="shop-single.html">Elevator Shoes </a>
-                                </h4>
-
-                                <div class="product_price">
-                                    <div class="grid-price">
-                                        <span class="money">$575.00</span>
-                                    </div>
-                                </div>
-                                <ul class="stars">
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-half-o" aria-hidden="true"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-star-o" aria-hidden="true"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+                {% endfor %}
+                    
                 </div>
             </div>
         </div>
