--- a/templates/singleproduct.html
+++ b/templates/singleproduct.html
@@ -33,11 +33,15 @@
     rel="stylesheet">
 <!-- //Fonts -->
 {% endblock style %}
+{% block css %}
+
+
+{% endblock %}
 
 
 {% block body %}
 {% block paged %}{{single.product_name}}{% endblock paged %}
-    <!-- //header -->
+<!-- //header -->
 
 {% block active %}active{% endblock active %}
 
@@ -170,14 +174,14 @@
                 <!-- //reviews -->
                 <!-- deals -->
                 <div class="deal-leftmk left-side">
-                    
-                    
+
+
                     <h3 class="sear-head">Special Deals</h3>
                     {% for s in  catagory %}
                     <div class="special-sec1 row mb-3">
                         <div class="img-deals col-md-4">
-                        <a href="{{s.slug}}">
-                            <img src="{{s.product_image.url}}" class="img-fluid" alt="">
+                            <a href="{{s.slug}}">
+                                <img src="{{s.product_image.url}}" class="img-fluid" alt="">
                             </a>
                         </div>
                         <div class="img-deal1 col-md-4">
@@ -187,7 +191,7 @@
 
                     </div>
                     {% endfor %}
-                                   </div>
+                </div>
                 <!-- //deals -->
 
             </div>
@@ -200,15 +204,26 @@
                     </div>
                     <div class="desc1-right col-md-6 pl-lg-4">
                         <h3>{{single.product_name}}.</h3>
-                        <h5>{{single.prize}}  <a href="#">click for offer</a></h5>
+                        <h5>{{single.prize}} <a href="#">click for offer</a></h5>
                         <div class="available mt-3">
                             <form action="#" method="post" class="w3layouts-newsletter">
                                 <input type="email" name="Email" placeholder="Enter your email..." required="">
                                 <button class="btn1">Check</button>
 
                             </form>
+
+                            {% if user.is_authenticated %}
+                            <a href="#" class="btn btn-info btn-lg">
+                                <span style="color: rgb(255, 255, 255); "><i class="fa fa-shopping-cart" aria-hidden="true"></i> 
+                                </span>
+                            
+                                <span class="glyphicon glyphicon-shopping-cart"></span>  Shopping Cart
+                              </a>
+                            
+                            {% else %}
                             <span><a href="#">login to save in wishlist </a></span>
-                            <p>Lorem Ipsum has been the industry's standard since the 1500s. Praesent ullamcorper dui
+                            {% endif %}
+                            <p style="margin-top: .5rem;">Lorem Ipsum has been the industry's standard since the 1500s. Praesent ullamcorper dui
                                 turpis.. </p>
                         </div>
                         <div class="share-desc">
@@ -258,13 +273,13 @@
                 <!--recommendations page-->
                 <h3 class="shop-sing">Featured Products</h3>
                 <div class="row m-0">
-                {% for i in prod %}
-                
+                    {% for i in prod %}
+
                     <div class="col-md-4 product-men">
                         <div class="product-shoe-info shoe text-center">
                             <div class="men-thumb-item">
-                            <a href="{{i.slug}}">
-                                <img src="{{i.product_image.url}}" class="img-fluid" alt=""></a>
+                                <a href="{{i.slug}}">
+                                    <img src="{{i.product_image.url}}" class="img-fluid" alt=""></a>
                                 <span class="product-new-top">New</span>
                             </div>
                             <div class="item-info-product">
@@ -277,12 +292,12 @@
                                         <span class="money">{{i.prize}}</span>
                                     </div>
                                 </div>
-                              
+
                             </div>
                         </div>
                     </div>
-                {% endfor %}
-                    
+                    {% endfor %}
+
                 </div>
             </div>
         </div>
