--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,16 +13,24 @@
             <h3 class="tittle text-center"><span class="sub-tittle">Find Us</span> Contact Us</h3>
             <div class="row contact-main-info mt-5">
                 <div class="col-md-6 contact-right-content">
-                    <form action="#" method="post">
+
+
+
+                    <form action="/contact" method="post">
+
+                    {% csrf_token %}
                         <input type="text" name="Name" placeholder="Name" required="">
                         <input type="email" class="email" name="Email" placeholder="Email" required="">
-                        <input type="text" name="Phone no" placeholder="Phone" required="">
+                        <input type="text" name="Phoneno" placeholder="Phone" required="">
                         <textarea name="Message" placeholder="Message" required=""></textarea>
                         <div class="read mt-3">
                             <input type="submit" value="Submit">
+                        
                         </div>
                     </form>
                 </div>
+
+
                 <div class="col-md-6 contact-left-content">
                     <div class="address-con">
                         <h4 class="mb-2"><span class="fa fa-phone-square" aria-hidden="true"></span> Phone</h4>
