--- a/templates/example.html
+++ b/templates/example.html
@@ -1,12 +1,14 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
-    <meta name="keywords" content="Bootie Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <meta name="keywords"
+        content="Bootie Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
     <script>
-        addEventListener("load", function() {
+        addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
         }, false);
 
@@ -17,27 +19,35 @@
     <!-- //Meta tag Keywords -->
 
     <!-- Custom-Files -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" >
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <!-- Bootstrap-Core-CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all" />
     <!-- Style-CSS -->
-    <!-- font-awesome-icons --> 
+    <!-- font-awesome-icons -->
     <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
     <!-- //font-awesome-icons -->
     <!-- /Fonts -->
     <link href="//fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900"
+        rel="stylesheet">
     <!-- //Fonts -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
     {% block style %}{% endblock style %}
     <style>
-        {% block css %}{% endblock %}
+        {
+            % block css %
+        }
+
+            {
+            % endblock %
+        }
     </style>
 </head>
+
 <body>
-    
+
     <div class="main-banner inner" id="home">
         <!-- header -->
         <header class="header">
@@ -50,19 +60,23 @@
 
                     <label for="drop" class="toggle">Menu</label>
                     <input type="checkbox" id="drop" />
-                       <ul class="menu mt-2">
-                        <li class= "{% block active %}{% endblock active %}"><a href="/">Home</a></li>
+                    <ul class="menu mt-2">
+                        <li class="{% block active %}{% endblock active %}"><a href="/">Home</a></li>
                         <li><a href="/products">Shop Now</a></li>
                         <li><a href="/tracker">About</a></li>
                         <li><a href="/contact">Contact</a></li>
                         {% if user.is_authenticated %}
                         <li>
                             <!-- First Tier Drop Down -->
-                            <label for="drop-2" class="toggle">Drop Down <span class="fa fa-angle-down" aria-hidden="true"></span> </label>
-                            <a href="#"> login as {{request.user}} <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                            <label for="drop-2" class="toggle">Drop Down <span class="fa fa-angle-down"
+                                    aria-hidden="true"></span> </label>
+                            <a href="#"> login as {{request.user}} <span class="fa fa-angle-down"
+                                    aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                               <li><a href="/cart">your cart</a></li>
+                                <li><a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>your cart
+                                        (<span id="cart"> 0 </span>)
+                                    </a></li>
                                 <li><a href="/user">user</a></li>
                                 <li><a href="/logout">logout</a></li>
                             </ul>
@@ -92,17 +106,17 @@
     {% for message in messages  %}
 
     <div class="alert alert-{{ message.tags}} alert-dismissible fade show" role="alert">
-  
-      <strong>message:</strong>{{ message}}
-  
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+
+        <strong>message:</strong>{{ message}}
+
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
     </div>
-  
+
     {% endfor %}
-  
-  
+
+
     {% block body %}
     {% endblock body %}
 
@@ -115,7 +129,8 @@
                     <h2 class="logo-2 mb-lg-4 mb-3">
                         <a href="index.html"><span class="fa fa-bold" aria-hidden="true"></span>ootie</a>
                     </h2>
-                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.</p>
                     <h4 class="sub-con-fo ad-info my-4">Catch on Social</h4>
                     <ul class="w3layouts_social_list list-unstyled">
                         <li>
@@ -222,7 +237,8 @@
                             <a href="http://w3layouts.com"> W3layouts.</a>
                         </p>
                         <!-- move top icon -->
-                        <a href="#home" class="move-top text-right col-md-2"><span class="fa fa-long-arrow-up" aria-hidden="true"></span></a>
+                        <a href="#home" class="move-top text-right col-md-2"><span class="fa fa-long-arrow-up"
+                                aria-hidden="true"></span></a>
                         <!-- //move top icon -->
                     </div>
                 </div>
@@ -230,13 +246,9 @@
         </div>
     </footer>
     {% block scripts %}{% endblock scripts %}
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js">
+    </script>
+    {% block js %}{% endblock %}
 </body>
+
 </html>
-
-
-
-
-
-
-
-
