updatedating cart function on nav version

--- a/templates/example.html
+++ b/templates/example.html
@@ -95,7 +95,7 @@
                             <input type="checkbox" id="drop-2" />
                             <ul>
                                 <li><a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>your cart
-                                        (<span id="cart"> 0 </span>)
+                                        (<span id="cart"> {{cartitems}} </span>)
                                     </a></li>
                                 <li><a href="/user">user</a></li>
                                 <li><a href="/logout">logout</a></li>
