--- a/templates/home.html
+++ b/templates/home.html
@@ -79,7 +79,7 @@
                             <a href="#"> login as {{request.user}} <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                             <input type="checkbox" id="drop-2" />
                             <ul>
-                               <li><a href="/cart">your cart ({{cartitems}})</a></li>
+                               <li><a href="/cart">your cart <span id="cartno"> ({{cartitems}}) </span></a></li>
                                 <li><a href="/user">user</a></li>
                                 <li><a href="/logout">logout</a></li>
                             </ul>
@@ -415,7 +415,13 @@
     </footer>
     <!-- //footer -->
 
-
+    <script type="text/javascript"> 
+        var cartno = {{cartitems}}
+        console.log(cartno)
+        if (cartno == 0){
+            document.getElementById('cartno').classList.add("hidden")
+        }
+        </script>
 
 
 {% endblock body %}
