remove button in cart is working

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -64,7 +64,7 @@
                       <td class="col-sm-1 col-md-1 text-center"><strong>{{item.product.prize}}</strong></td>
                       <td class="col-sm-1 col-md-1 text-center"><strong>{{item.get_total}}</strong></td>
                       <td class="col-sm-1 col-md-1">
-                      <button type="button" class="btn btn-danger">
+                      <button type="button" class="btn btn-danger update-cart" data-products="{{item.product.id}}" data-action="delete">
                           <span class="glyphicon glyphicon-remove"></span> Remove
                       </button></td>
                   </tr>
