checkout template setting 1.0

--- a/templates/example.html
+++ b/templates/example.html
@@ -272,7 +272,7 @@
         var cartno = {{cartitems}}
         console.log(cartno)
         if (cartno == 0){
-            document.getElementById('cartno').classList.add("hidden")
+            document.getElementById('cartno').style.visibility="hidden";
         }
         </script>
    
