--- a/templates/products.html
+++ b/templates/products.html
@@ -236,7 +236,7 @@
 
                     {% endfor %}
                 </div>
-
+                <span id="formmmsbtnn" ><h1>Hello</h1></span>
                 <div class="grid-img-right mt-4 text-right">
                     <span class="money">Flat 50% Off</span>
                     <a href="shop-single.html" class="btn">Shop Now</a>
@@ -247,18 +247,10 @@
 </section>
 <!-- //contact -->
 <!-- footer -->
-
-
+{% endblock body %}
 
 {% block js %}
+
 <script type="text/javascript" src="{% static 'css/cart.js' %}"></script>
-<script type="text/javascript"> 
-    var cartno = {{cartitems}}
-    console.log(cartno)
-    if (cartno == 0){
-        document.getElementById('cartno').classList.add("hidden")
-    }
-    </script>
 
 {% endblock %}
-{% endblock body %}
