--- a/templates/home.html
+++ b/templates/home.html
@@ -419,7 +419,7 @@
         var cartno = {{cartitems}}
         console.log(cartno)
         if (cartno == 0){
-            document.getElementById('cartno').classList.add("hidden")
+            document.getElementById('cartno').style.visibility="hidden";
         }
         </script>
 
