--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -1,117 +1,65 @@
-{% extends "example.html" %}
-  {% load static %}
-
+{% extends 'example.html' %}
+{% load static %}
 {% block style %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    {% endblock style %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-{% endblock style %}
-
-    {% block title %}tracker{% endblock title %}
-      <style>
-	  {% block css %}
-          .col-md-3
-          {
-          display: inline-block;
-          margin-left:-4px;
-          }
-          .carousel-indicators .active {
-          background-color: rgb(0, 63, 88);
-            }
-          .col-md-3 img{
-          width:100%;
-          height:auto;
-          }
-          body .carousel-indicator li{
-          background-color: blue;
-          }
-          body .carousel-indicators{
-          bottom: 0;
-          }
-          body .carousel-control-prev-icon,
-          body .carousel-control-next-icon{
-          background-color: blue;
-          }
-           body .no-padding{
-           padding-left: 0,
-           padding-right: 0;
-           }
-	  {% endblock %}
-  
-  
-  {% block body %}
+    {% block paged %}TRACKER{% endblock paged %}
+    {% block body %}
+    <!---->
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <div class="accordion" id="accordionExample">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h5 class="mb-0">
+            <input id="credit" name="paymentMethod" type="radio" class="custom-control-input"  data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" checked required>
+            <label class="custom-control-label" for="credit">Credit card</label>
+            
+          </h5>
+        </div>
     
-   
-  <div class="container">
-
-<!--Slideshow starts here -->
-{% for product, range, nSlides in allProds %}
-<h5 class="my-4">Flash Sale On {{product.0.sub_category}} - Recommended Items</h5>
-<div id="demo{{forloop.counter}}" class="carousel slide my-3" data-ride="carousel">
-<ul class="carousel-indicators">
-  <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
-
-   {% for i in range %}
-  <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}" ></li>
-  {% endfor %}
-</ul>
-
-
-<div class="container carousel-inner no-padding">
-
-  <div class="carousel-item active">
-	<div class="col-xs-3 col-sm-3 col-md-3">
-	  <div class="card" style="width: 18rem;">
-		<img src='{{product.0.product_image.url}}' class="card-img-top" alt="...">
-		<div class="card-body">
-			<h5 class="card-title">{{product.0.product_name}}</h5>
-			<p class="card-text">{{product.0.desc|truncatechars:9 }}</p>
-			<a href="#" class="btn btn-primary">Add to Cart</a>
-		</div>
-	  </div>
-   </div>
-
-
-	{% for i in product|slice:"1:"%}
-	<div class="col-xs-3 col-sm-3 col-md-3">
-	  <div class="card" style="width: 18rem;">
-		<img src='{{i.product_image.url}}' class="card-img-top" alt="...">
-		<div class="card-body">
-		  <h5 class="card-title">{{i.product_name}}</h5>
-		  <p class="card-text">{{i.desc|truncatechars:20}}</p>
-		  <a href="#" class="btn btn-primary">Add To Cart</a>
-		</div>
-	  </div>
-	</div>
-	{% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
-  </div><div class="carousel-item">
-	{% endif %}
-
-	{% endfor %}
-</div>
-
-
-
-</div>
-</div>
-<!-- left and right controls for the slide -->
-<a class="carousel-control-prev" href="#demo{{forloop.counter}}" data-slide="prev">
-	<span class="carousel-control-prev-icon"></span>
-</a>
-<a class="carousel-control-next" href="#demo{{forloop.counter}}" data-slide="next">
-	<span class="carousel-control-next-icon"></span>
-</a>
-{% endfor %}
-</div>
-{% block scripts %}
-
-
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div class="card-body">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Collapsible Group Item #2
+            </button>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+          <div class="card-body">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Collapsible Group Item #3
+            </button>
+          </h5>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+          <div class="card-body">
+            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
-{% endblock scripts %}
-{% endblock body %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
+  {% endblock body %}
