--- a/templates/products.html
+++ b/templates/products.html
@@ -219,16 +219,18 @@
 
 
 
+                                {% if user.is_authenticated %}      
                                 <button type="submit" data-products="{{products.id}}" data-action="add"
                                     style="margin-top:1em ;" id="{{products.id}}" class="btn btn-info cart update-cart">
 
                                     <span style="color: rgb(255, 255, 255); "><i class="fa fa-shopping-cart"
                                             aria-hidden="true"></i>
                                     </span>
-
                                     <span class="glyphicon glyphicon-shopping-cart"></span>
                                     add to cart</button>
+                                    {% else %}
 
+                                    {% endif %}
                             </div>
                         </div>
                     </div>
@@ -236,7 +238,7 @@
 
                     {% endfor %}
                 </div>
-                <span id="formmmsbtnn" ><h1>Hello</h1></span>
+                
                 <div class="grid-img-right mt-4 text-right">
                     <span class="money">Flat 50% Off</span>
                     <a href="shop-single.html" class="btn">Shop Now</a>
