--- a/templates/singleproduct.html
+++ b/templates/singleproduct.html
@@ -221,7 +221,7 @@
                               </a>
                             
                             {% else %}
-                            <span><a href="#">login to save in wishlist </a></span>
+                            <span><a href="/login">login to save in wishlist </a></span>
                             {% endif %}
                             <p style="margin-top: .5rem;">Lorem Ipsum has been the industry's standard since the 1500s. Praesent ullamcorper dui
                                 turpis.. </p>
