--- a/templates/tracker.html
+++ b/templates/tracker.html
@@ -7,47 +7,9 @@
     <!---->
     <title>Hello, world!</title>
   </head>
-  <body>
-
+  <body style="max-height: 100vh;">
+gvfgfgf
     <div id="paypal-button-container"></div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    {% block scripts %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js">
-    </script>
-    <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
-    <script>
-      paypal.Buttons({
-        createOrder: function(data, actions) {
-          // This function sets up the details of the transaction, including the amount and line item details.
-          return actions.order.create({
-            purchase_units: [{
-              amount: {
-                value: '0.01'
-              }
-            }]
-          });
-        },
-        onApprove: function(data, actions) {
-          // This function captures the funds from the transaction.
-          return actions.order.capture().then(function(details) {
-            // This function shows a transaction success message to your buyer.
-            alert('Transaction completed by ' + details.payer.name.given_name);
-          });
-        }
-      }).render('#paypal-button-container');
-      //This function displays Smart Payment Buttons on your web page.
-    </script>
-    <script type="text/javascript"> 
-        var cartno = {{cartitems}}
-        console.log(cartno)
-        if (cartno == 0){
-            document.getElementById('cartno').style.visibility="hidden";
-        }
-        </script>
-    {% endblock scripts %}
+    
   </body>
   {% endblock body %}
